--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,8 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL="libsql://turso.io"
+DATABASE_TOKEN="1234"
 
 # Example:
 # SERVERVAR="foo"
