feat: add Google Sheets integration and environment variables

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,20 @@
 DATABASE_URL="libsql://turso.io"
 DATABASE_TOKEN="1234"
 
+# Google
+TYPE=   
+PROJECT_ID=
+PRIVATE_KEY_ID=
+PRIVATE_KEY=
+CLIENT_EMAIL=
+CLIENT_ID=
+AUTH_URI=
+TOKEN_URI=
+AUTH_PROVIDER_X509_CERT_URL=
+CLIENT_X509_CERT_URL=
+UNIVERSE_DOMAIN=
+SPREADSHEET_ID=
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
