--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "drizzle-orm": "^0.41.0",
+    "google-auth-library": "^10.1.0",
+    "google-spreadsheet": "^4.1.5",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
