--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "google-spreadsheet": "^4.1.5",
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "2.15.4",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
@@ -60,5 +62,8 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
+  },
+  "overrides": {
+    "react-is": "^19.0.0"
   }
 }
