--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@libsql/client": "^0.14.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
@@ -36,6 +37,7 @@
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "2.15.4",
