feat: implement Redis caching for Google Sheets API
- Add @upstash/redis for caching sheet metadata and data
- Set 24-hour cache TTL matching daily lighthouse test frequency
- Cache both getAllSheets and getMetricsForSheet responses
- Remove generateStaticParams to fix build-time context issues
- Eliminate need for manual cache clearing utilities
- Significantly reduce Google Sheets API calls and rate limiting
- Improve performance with persistent Redis cache

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,10 @@ CLIENT_X509_CERT_URL=
 UNIVERSE_DOMAIN=
 SPREADSHEET_ID=
 
+# Upstash
+UPSTASH_REDIS_REST_URL="upstash.io"
+UPSTASH_REDIS_REST_TOKEN="1234"
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
