--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^19.0.0",
     "recharts": "2.15.4",
     "server-only": "^0.0.1",
+    "simplebar-react": "^3.3.2",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
