--- a/package.json
+++ b/package.json
@@ -21,11 +21,6 @@
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
@@ -41,6 +36,7 @@
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "2.15.4",
